wordpress/network-policy-wordpress-allow-ingress-to-nginx-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-allow-ingress-to-nginx-from-traefik
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress
      component: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
